processed/gerrit/txt/58440.txt
Change:     58440
Subject:    LU-18821 build: fix [-Werror=pointer-to-int-cast] error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/58440
Change-Id:  I5938a4c09a50010ce3b99bc6f978fed5cc32a5d6
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2025-03-17 17:30:23.000000000
Updated:    2025-03-26 04:06:20.000000000
Patch Set:  2
Insertions: +11
Deletions:  -8
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Oleg Drokin: +2; Hongchao Zhang: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  CC: Li Xi
  REVIEWER: Oleg Drokin, Andreas Dilger, Hongchao Zhang

--- Commit Message ---
LU-18821 build: fix [-Werror=pointer-to-int-cast] error

This patch fixes the following error on 32-bit architectures
by replacing the __u64 cast with uintptr_t, which is either
32-bit or 64-bit:

  lustre/include/obd_class.h: In function 'obd_quota_iter':
  lustre/include/obd_class.h:1289:39: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   1289 |                 oqctl->qc_iter_list = (__u64)list;
        |                                       ^
  cc1: all warnings being treated as errors

Change-Id: I5938a4c09a50010ce3b99bc6f978fed5cc32a5d6
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58440
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Hongchao Zhang <hongchao@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2025-03-17 17:30:23.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-03-17 17:32:40.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2025-03-17 18:23:44.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/111795/ : SUCCESS

--- Message (Autotest, 2025-03-18 00:05:08.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-ldiskfs session on el9.4-x86_64/ldiskfs servers and clients for build 111795 patch 1. Requested by jianyu because of LU-18751.

--- Message (Autotest, 2025-03-18 00:11:29.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-dne-part-4 session on el8.10-x86_64/ldiskfs servers and clients for build 111795 patch 1. Requested by jianyu because of LU-16860.

--- Message (Autotest, 2025-03-18 04:51:18.000000000) ---
Patch Set 1:

Onyx Autotest retesting enforced review-dne-zfs-part-1 session on el8.10-x86_64/zfs servers and clients for build 111795 patch 1. Requested by jianyu because of LU-16864.

--- Message (Autotest, 2025-03-18 04:51:59.000000000) ---
Patch Set 1:

Trevis Autotest retesting enforced review-dne-part-3 session on el9.4-x86_64/ldiskfs servers and clients for build 111795 patch 1. Requested by jianyu because of LU-17861.

--- Message (Autotest, 2025-03-18 04:55:29.000000000) ---
Patch Set 1:

Trevis Autotest retesting non-enforced review-dne-part-9 session on el9.5-x86_64/ldiskfs servers and clients for build 111795 patch 1. Requested by jianyu because of LU-18104.

--- Message (Andreas Dilger, 2025-03-18 09:38:52.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Hongchao Zhang, 2025-03-20 03:10:05.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2025-03-26 04:06:17.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2025-03-26 04:06:20.000000000) ---
Change has been successfully cherry-picked as 532ed744188343cc3dc058ec96f55df94a6c8dab by Oleg Drokin
